Move CPU logic to cpu.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(${LIBNAME} SHARED
     src/libretro.cpp
 	src/opl3.c
 	src/apu.cpp
+	src/cpu.cpp
     )
 set_target_properties(${LIBNAME} PROPERTIES
     SOVERSION 1
